# machine-learning-projects

./: .gitignore  README.md  pyproject.toml
01_ml-overview/: README.md
02_knn/: README.md
02_knn/digits-knn-classifier/: README.md  main.py  pyproject.toml
02_knn/iris-knn-classifier/: main.py  pyproject.toml
03_linear-regression/: README.md
03_linear-regression/linear-regression-from-scratch/: README.md  main.py  pyproject.toml
04_logistic-regression/: README.md
04_logistic-regression/cancer-prediction/: README.md  main.py
04_logistic-regression/telecom-churn-prediction/: README.md  main.py
05_decision-tree/: README.md
05_decision-tree/titanic-survival-prediction/: README.md  main.py
90_pending-review/: README.md
90_pending-review/spam-classifier/: README.md  main.py  pyproject.toml
datasets/: README.md
